<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoW-S</string>
    <string name="title_section1">Current Scan Results</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Debug</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">ALARM-MESSAGE</string>
    <string name="start_button_text">dbg-msg</string>
	<string name="read_button_text">aps</string>
	<string name="lows_button_text">lows</string>
	<string name="search_button_text">st</string>
	<string name="service_name">lows_background_alarm_service</string>
	<string name="service_two_name">lows_codebook_updater_service</string>
	<string name="standard_output_text"/>
</resources>
